[tool.poetry]
name = "tic_tac_toe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pony = "^0.7.16"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"